--- a/app/src/main/res/layout/character_view.xml
+++ b/app/src/main/res/layout/character_view.xml
@@ -79,8 +79,8 @@
 
     <Button
         android:id="@+id/characterViewMoreInformation"
-        android:layout_width="180dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:backgroundTint="#6998FD"
         android:text="More Information"
         android:textColor="@color/black"
@@ -89,18 +89,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/toDice"
+        android:id="@+id/characterViewDiceRoller"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#6793F1"
+        android:layout_marginEnd="5dp"
+        android:backgroundTint="#6998FD"
         android:text="Dice"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.876"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.146" />
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@id/characterViewMoreInformation"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -133,7 +131,7 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
                         android:text="Health:"
-                        android:textSize="16sp"
+                        android:textSize="22sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -143,7 +141,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="3dp"
                         android:text="/"
-                        android:textSize="16sp"
+                        android:textSize="22sp"
                         app:layout_constraintStart_toEndOf="@id/character_view_health_text"
                         app:layout_constraintTop_toTopOf="@id/character_view_health_text" />
 
@@ -152,7 +150,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="/"
-                        android:textSize="16sp"
+                        android:textSize="22sp"
                         app:layout_constraintStart_toEndOf="@id/character_view_current_health"
                         app:layout_constraintTop_toTopOf="@id/character_view_current_health" />
 
@@ -161,7 +159,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="/"
-                        android:textSize="16sp"
+                        android:textSize="22sp"
                         app:layout_constraintStart_toEndOf="@id/character_view_health_divider"
                         app:layout_constraintTop_toTopOf="@id/character_view_health_divider" />
 
@@ -169,6 +167,7 @@
                         android:id="@+id/character_view_subtract_health"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
                         android:layout_marginTop="-30dp"
                         android:background="#00FFFFFF"
                         android:scaleX=".25"
@@ -181,7 +180,7 @@
                         android:id="@+id/character_view_add_health"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
+                        android:layout_marginStart="35dp"
                         android:layout_marginTop="-30dp"
                         android:background="#00372C2C"
                         android:scaleX=".25"
